--- a/Juergen2.ipynb
+++ b/Juergen2.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "NameError",
+     "evalue": "name 'inputs' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-f859c1394a0c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     68\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m<=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquestion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m<=\u001b[0m\u001b[0;36m25\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[0mshort_questions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquestion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m         \u001b[0mshort_answers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclean_answers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m     \u001b[0mi\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m     \u001b[0mclean_questions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-9a84dfedeff8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    265\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    266\u001b[0m \u001b[0;31m#Getting the shape of the inputs tensor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 267\u001b[0;31m \u001b[0minput_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    268\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    269\u001b[0m \u001b[0;31m#Getting the training and test predictions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'inputs' is not defined"
      ]
     }
    ],
@@ -89,14 +89,14 @@
     "        short_questions.append(question)\n",
     "        short_answers.append(clean_answers[i])\n",
     "    i+=1\n",
-    "    clean_questions=[]\n",
-    "    clean_answers=[]\n",
-    "    i=0\n",
-    "    for answer in short_answers:\n",
-    "        if 2<=len(answer.split())<=25:\n",
-    "            clean_answers.append(answer)\n",
-    "            clean_questions.append(short_questions[i])\n",
-    "            i+=1\n",
+    "clean_questions=[]\n",
+    "clean_answers=[]\n",
+    "i=0\n",
+    "for answer in short_answers:\n",
+    "    if 2<=len(answer.split())<=25:\n",
+    "        clean_answers.append(answer)\n",
+    "        clean_questions.append(short_questions[i])\n",
+    "        i+=1\n",
     "            \n",
     "#Creating a dictionary that maps each word to its number of occurrences\n",
     "word2count={}\n",
@@ -115,10 +115,10 @@
     "            \n",
     "#Creating two dictionaries that map the questions words and the answer words to a unique integer\n",
     "threshold_questions = 15\n",
-    "questionsword2int = {}\n",
+    "questionswords2int = {}\n",
     "word_number = 0\n",
     "for word, count in word2count.items():\n",
-    "    if count >= treshold_questions:\n",
+    "    if count >= threshold_questions:\n",
     "        questionswords2int[word] = word_number\n",
     "        word_number += 1\n",
     "threshold_answers = 15\n",
